# quepanel

./: CMakeLists.txt
src/: CMakeLists.txt  mainpanel.cpp  resources.cpp  resources.h
src/plugins/clock/: clocklabel.cpp
src/plugins/mainmenu/: mainmenu.cpp
src/plugins/systray/: trayicon.cpp
src/plugins/taskbar/: qmtaskbar.cpp  qmtaskbar.h  qmtaskgroup.cpp  qmtaskgroup.h
